Cherry pick Exclude OGRE2 Overlay using a CMake argument (gz-rendering9)
Signed-off-by: Ian Chen <ichen@openrobotics.org>

--- a/include/gz/rendering/config.hh.in
+++ b/include/gz/rendering/config.hh.in
@@ -34,6 +34,7 @@
 
 #cmakedefine GZ_RENDERING_HAVE_OGRE 1
 #cmakedefine GZ_RENDERING_HAVE_OGRE2 1
+#cmakedefine GZ_RENDERING_HAVE_OGRE2_OVERLAY 1
 #cmakedefine GZ_RENDERING_HAVE_OPTIX 1
 #cmakedefine GZ_RENDERING_HAVE_VULKAN 1
 
