Added a skip to optix if FreeImage not found
Signed-off-by: miguelgonrod <miguelgonrod2004@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,6 +196,12 @@ if(NOT MSVC)
   endif()
 endif()
 
+  if (NOT FreeImage_FOUND)
+    message(STATUS "Skipping component [optix] due to missing FreeImage")
+    set(INTERNAL_SKIP_optix true)
+    set(GZ_RENDERING_HAVE_OPTIX FALSE)
+  endif()
+
 #####################################
 # Define compile-time default variables
 if(MSVC)
