--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -13,7 +13,7 @@ bazel_dep(name = "rules_license", version = "1.0.0")
 
 # Gazebo Dependencies
 bazel_dep(name = "rules_gazebo", version = "0.0.6")
-bazel_dep(name = "gz-common", version = "7.0.0-pre1")
-bazel_dep(name = "gz-math", version = "9.0.0-pre1")
-bazel_dep(name = "gz-plugin", version = "4.0.0-pre1")
-bazel_dep(name = "gz-utils", version = "4.0.0-pre1")
+bazel_dep(name = "gz-common", version = "7.0.0")
+bazel_dep(name = "gz-math", version = "9.0.0")
+bazel_dep(name = "gz-plugin", version = "4.0.0")
+bazel_dep(name = "gz-utils", version = "4.0.0")
