Added FreeImage as an optional dependency to avoid warning
Signed-off-by: miguelgonrod <miguel.gonzales@ekumenlabs.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,7 +175,7 @@ if(NOT MSVC)
   #--------------------------------------
   # Find FreeImage
   gz_find_package(FreeImage VERSION 3.9
-    REQUIRED_BY optix
+    OPTIONAL_BY optix
     PRIVATE_FOR optix)
 
   #--------------------------------------
